@@ -173,6 +173,14 @@ private:
 	static int WaitForTurn(lua_State* L);
 	static int WaitForMove(lua_State* L);
 
+	static int MultiExec(lua_State *L, int (*const func)(lua_State*), const int expectedArgs);
+	static int MultiSetPieceVisibility(lua_State* L);
+	static int MultiSpin(lua_State* L);
+	static int MultiStopSpin(lua_State* L);
+	static int MultiExplode(lua_State* L);
+	static int MultiTurn(lua_State* L);
+	static int MultiMove(lua_State* L);
+
 	// Lua COB function to work around lack of working CBCobThreadFinish
 	static int SetDeathScriptFinished(lua_State* L);
 
