@@ -130,6 +130,7 @@ Lua:
  - add `Spring.SetUnitPhysicalStateBit(number unitID, number stateBit) -> Set a unit's PhysicalState.
  - Lua C Macros (cast and registry) prefixed lua_ to fix compilation issues.
  - Protect Spring.GetGroupUnitsCount from crashing when given an invalid group id.
+ - Add new variadic variants for some Lua unit script functions: MultiTurn, MultiMove, MultiSpin, etc.
 
 
 Game Setup:
